<resources>
    <string name="app_name">MainProject</string>
    <string name="student_timetable_button">Students Timetable</string>
    <string name="teacher_timetable_button">Teachers Timetable</string>
    <string name="hse_logo">HSE_logo</string>
    <string name="choose_group">Choose your group:</string>
    <string name="time_label">Now:</string>
    <string name="class_status">There is a class now / No classes now</string>
    <string name="subject">Subject</string>
    <string name="classroom">Class Room</string>
    <string name="building">Building</string>
    <string name="teacher">Teacher</string>
    <string name="daily_timetable_button">DAILY TIMETABLE</string>
    <string name="weekly_timetable_button">WEEKLY TIMETABLE</string>
    <string name="current_time">time now</string>
    <string name="choose_teacher">Choose Teacher:</string>
    <string name="settings_button">Settings</string>
    <string name="photo_request">Choose your photo:</string>
    <string name="make_photo_button">MAKE PHOTO</string>
    <string name="name_input">Input your name</string>
    <string name="current_light_data">Current light:</string>
    <string name="save_settings_button">SAVE</string>
    <string name="profile_image_icon" translatable="false">profile_image_icon</string>
    <string name="sensor_manager_inaccessibility">Unable to get sensor information</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="camera_permission_message">Access to the camera is required to take photos.</string>
    <string name="request_accept_button">Provide</string>
    <string name="request_deny_button">Deny</string>
    <string name="camera_request_denied_message">Camera access denied. Unable to take photo.</string>
    <string name="found_sensors_header">Available sensors:</string>
    <string name="sensors_not_found_message">Sensors not found.</string>
    <string name="name_saved_message">Name saved</string>
    <string name="photo_saved_message">Photo saved</string>
    <string name="saving_photo_error">Error occurred while saving photo</string>
    <string name="time_not_available">Error getting current time</string>
    <string name="shcedule_week_title_postfix">" weekly"</string>
    <string name="shcedule_day_title_postfix">" daily"</string>
    <string name="lesson_type_1">LECTURE</string>
    <string name="lesson_type_3">PRACTICE</string>
    <string name="lesson_type_2">RESEARCH SEMINAR</string>
    <string name="lesson_type_default">LESSON</string>
    <string name="lesson_is_going_message">Lesson is going</string>
    <string name="lesson_is_not_going_message">Lesson is not going</string>
    <string name="group_spinner_select">Select group</string>
    <string name="teacher_spinner_select">Select teacher</string>
</resources>