<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/select_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_group"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/LabelStyle"/>

    <Spinner
        android:id="@+id/spinner_group"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/select_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/time_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_group"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        style="@style/LabelStyle"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_group"
        app:layout_constraintStart_toEndOf="@id/time_now"
        android:layout_marginTop="5dp"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/class_status"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_now" />

    <LinearLayout
        android:id="@+id/class_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/status">

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="2dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classroom"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/building"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher"
            android:padding="2dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/building" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/class_info_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="10dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/day_schedule"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/daily_timetable_button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/week_schedule"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/weekly_timetable_button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>